--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,7 +5,7 @@
         <h1>Welcome to CalCalc.</h1>
         <h2>Select a calculator:</h2>
         <ul>
-            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/basic.html">Basic</a></li>
+            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/index.html">Basic</a></li>
             <li>Derivative</li>
             <li>Integral</li>
             <li>Differential Equation</li>
