--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,12 +5,12 @@
         <h1>Welcome to CalCalc.</h1>
         <h2>Select a calculator:</h2>
         <ul>
-            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/index.html">Basic</a></li>
-            <li>Derivative</li>
-            <li>Integral</li>
-            <li>Differential Equation</li>
-            <li>Slope Field</li>
-            <li>Vector Field</li>
+            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/basic.html">Basic</a></li>
+            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/derivative.html">Derivative</a></li>
+            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/integral.html">Integral</a></li>
+            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/differential_equation.html">Differential Equation</a></li>
+            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/slope_field.html">Slope Field</a></li>
+            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/vector_field.html">Vector Field</a></li>
         </ul>
     </body>
 </html>
