style site header

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -2,7 +2,27 @@
 
 <html>
     <body>
-        <h1>Welcome to CalCalc.</h1>
+        <div class=header>
+            <div class=text>
+                <h1><span style="color:black" Cal&#183Calc></span></h1>
+            </div>
+        </div>
+        <style>
+            body {
+                background-color: lightcyan;
+                margin: auto;
+                display: flex;
+            }
+
+            .header {
+                background-color: lightskyblue;
+                width: 75%;
+                height: 30%; 
+            }
+        </style>
+        <div class=text>
+            <h1>Welcome to CalCalc.</h1>
+        </div>
         <h2>Select a calculator:</h2>
         <ul>
             <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/basic.html">Basic</a></li>
