--- a/calculator/index.html
+++ b/calculator/index.html
@@ -2,26 +2,31 @@
 
 <html>
     <body>
-        <div class=header>
-            <div class=text>
-                <h1><span style="color:black" Cal&#183Calc></span></h1>
-            </div>
-        </div>
         <style>
             body {
                 background-color: lightcyan;
-                margin: auto;
-                display: flex;
-            }
-
-            .header {
-                background-color: lightskyblue;
-                width: 75%;
-                height: 30%; 
+                margin: 25px;
             }
         </style>
-        <div class=text>
-            <h1>Welcome to CalCalc.</h1>
+        <div class="header">
+            <style>
+                .header {
+                    background-color: lightskyblue;
+                    width: 100%;
+                    height: 350px;
+                    display: flex;
+                    align-items: baseline;
+                    justify-content: baseline;
+                }
+
+                .text {
+                    text-align: center;
+                    font-size: 300px;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-variant: small-caps;
+            }
+            </style>
+        <h1 class=text>Cal &#183; Calc</h1>
         </div>
         <h2>Select a calculator:</h2>
         <ul>
