--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
-
 <html>
-    <body>
-        <style>
-            body {
-                background-color: lightcyan;
-                margin: 25px;
-            }
-        </style>
-        <div class="header">
-            <style>
-                .header {
-                    background-color: lightskyblue;
-                    width: 100%;
-                    height: 350px;
-                    display: flex;
-                    align-items: baseline;
-                    justify-content: baseline;
-                }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>CalCalc</title>
+        <link href="./styles.css" rel="stylesheet" type="text/css">
+    </head>
 
-                .text {
-                    text-align: center;
-                    font-size: 300px;
-                    font-family: Arial, Helvetica, sans-serif;
-                    font-variant: small-caps;
-            }
-            </style>
-        <h1 class=text>Cal &#183; Calc</h1>
-        </div>
-        <h2>Select a calculator:</h2>
-        <ul>
-            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/basic.html">Basic</a></li>
-            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/derivative.html">Derivative</a></li>
-            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/integral.html">Integral</a></li>
-            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/differential_equation.html">Differential Equation</a></li>
-            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/slope_field.html">Slope Field</a></li>
-            <li><a href="file:///media/fuse/crostini_b58c56b8ebb579a5556bcba4f7b1d86d848ff18e_termina_penguin/github/acarston.github.io/calculator/vector_field.html">Vector Field</a></li>
-        </ul>
+    <body>
+
+        <header>
+
+        </header>
+
+        <section class="top">
+            <h1>Cal&#183;Calc</h1>
+        </section>
+
+        <section class="calculators">
+            <div class="basic">
+                <h1>Basic</h1>
+                <figure>
+                    <img src="./basiccalc.png" alt="basic calculator">
+                </figure>
+            </div>
+            <div class="derivative">
+                <h1>Derivative</h1>
+                <figure>
+                    <img src="./derivativecalculator.png" alt="basic calculator">
+                </figure>
+            </div>
+            <div class="integral">
+                <h1>Integral</h1>
+                <figure>
+                    <img src="./integralcalc.png" alt="basic calculator">
+                </figure>
+            </div>
+            <div class="differential_equation">
+                <h1>DEQ</h1>
+                <figure>
+                    <img src="./deqcalc2.png" alt="basic calculator">
+                </figure>
+            </div>
+        </section>
     </body>
 </html>
