--- a/wordle2/index.html
+++ b/wordle2/index.html
@@ -8,6 +8,12 @@
     </head>
 
     <body>
+        <div id="letter"></div>
+        <div id="letter1"></div>
+        <div id="letter2"></div>
+        <div id="letter3"></div>
+        <div id="letter4"></div>
+        <div id="letter5"></div>
         <div id="container">
                 <div id="header"><h1>WORDLE</h1></div>
                 <div id="game">
@@ -19,6 +25,11 @@
                                 <div id="box3"></div>
                                 <div id="box4"></div>
                                 <div id="box5"></div>
+                                <div><h1 id="box1-letter"></h1></div>
+                                <div><h1 id="box2-letter"></h1></div>
+                                <div><h1 id="box3-letter"></h1></div>
+                                <div><h1 id="box4-letter"></h1></div>
+                                <div><h1 id="box5-letter"></h1></div>
                             </div>
                             <div class="row2">
                                 <div id="box1"></div>
@@ -26,6 +37,11 @@
                                 <div id="box3"></div>
                                 <div id="box4"></div>
                                 <div id="box5"></div>
+                                <div><h1 id="box1-letter"></h1></div>
+                                <div><h1 id="box2-letter"></h1></div>
+                                <div><h1 id="box3-letter"></h1></div>
+                                <div><h1 id="box4-letter"></h1></div>
+                                <div><h1 id="box5-letter"></h1></div>
                             </div>
                             <div class="row3">
                                 <div id="box1"></div>
@@ -33,6 +49,11 @@
                                 <div id="box3"></div>
                                 <div id="box4"></div>
                                 <div id="box5"></div>
+                                <div id="box1-letter"><h1></h1></div>
+                                <div id="box2-letter"><h1></h1></div>
+                                <div id="box3-letter"><h1></h1></div>
+                                <div id="box4-letter"><h1></h1></div>
+                                <div id="box5-letter"><h1></h1></div>
                             </div>
                             <div class="row4">
                                 <div id="box1"></div>
@@ -40,6 +61,11 @@
                                 <div id="box3"></div>
                                 <div id="box4"></div>
                                 <div id="box5"></div>
+                                <div><h1 id="box1-letter"></h1></div>
+                                <div><h1 id="box2-letter"></h1></div>
+                                <div><h1 id="box3-letter"></h1></div>
+                                <div><h1 id="box4-letter"></h1></div>
+                                <div><h1 id="box5-letter"></h1></div>
                             </div>
                             <div class="row5">
                                 <div id="box1"></div>
@@ -47,6 +73,11 @@
                                 <div id="box3"></div>
                                 <div id="box4"></div>
                                 <div id="box5"></div>
+                                <div><h1 id="box1-letter"></h1></div>
+                                <div><h1 id="box2-letter"></h1></div>
+                                <div><h1 id="box3-letter"></h1></div>
+                                <div><h1 id="box4-letter"></h1></div>
+                                <div><h1 id="box5-letter"></h1></div>
                             </div>
                             <div class="row6">
                                 <div id="box1"></div>
@@ -54,6 +85,11 @@
                                 <div id="box3"></div>
                                 <div id="box4"></div>
                                 <div id="box5"></div>
+                                <div><h1 id="box1-letter"></h1></div>
+                                <div><h1 id="box2-letter"></h1></div>
+                                <div><h1 id="box3-letter"></h1></div>
+                                <div><h1 id="box4-letter"></h1></div>
+                                <div><h1 id="box5-letter"></h1></div>
                             </div>
                         </div>
                     </div>
