finish broken javascript

--- a/wordle2/index.html
+++ b/wordle2/index.html
@@ -15,8 +15,9 @@
         <div id="letter4"></div>
         <div id="letter5"></div>
         <div id="container">
-                <div id="header"><h1>WORDLE</h1></div>
+                <div id="header-wordle"><h1>WORDLE</h1></div>
                 <div id="game">
+                    <h1 id="row-letters">ATONE</h1>
                     <div id="frame">
                         <div class="boxframe">
                             <div class="row1">
@@ -25,76 +26,47 @@
                                 <div id="box3"></div>
                                 <div id="box4"></div>
                                 <div id="box5"></div>
-                                <div><h1 id="box1-letter"></h1></div>
-                                <div><h1 id="box2-letter"></h1></div>
-                                <div><h1 id="box3-letter"></h1></div>
-                                <div><h1 id="box4-letter"></h1></div>
-                                <div><h1 id="box5-letter"></h1></div>
                             </div>
                             <div class="row2">
-                                <div id="box1"></div>
-                                <div id="box2"></div>
-                                <div id="box3"></div>
-                                <div id="box4"></div>
-                                <div id="box5"></div>
-                                <div><h1 id="box1-letter"></h1></div>
-                                <div><h1 id="box2-letter"></h1></div>
-                                <div><h1 id="box3-letter"></h1></div>
-                                <div><h1 id="box4-letter"></h1></div>
-                                <div><h1 id="box5-letter"></h1></div>
+                                <div id="box1"><h1 id="box1-letter"></h1></div>
+                                <div id="box2"><h1 id="box2-letter"></h1></div>
+                                <div id="box3"><h1 id="box3-letter"></h1></div>
+                                <div id="box4"><h1 id="box4-letter"></h1></div>
+                                <div id="box5"><h1 id="box5-letter"></h1></div>
                             </div>
                             <div class="row3">
-                                <div id="box1"></div>
-                                <div id="box2"></div>
-                                <div id="box3"></div>
-                                <div id="box4"></div>
-                                <div id="box5"></div>
-                                <div id="box1-letter"><h1></h1></div>
-                                <div id="box2-letter"><h1></h1></div>
-                                <div id="box3-letter"><h1></h1></div>
-                                <div id="box4-letter"><h1></h1></div>
-                                <div id="box5-letter"><h1></h1></div>
+                                <div id="box1"><h1 id="box1-letter"></h1></div>
+                                <div id="box2"><h1 id="box2-letter"></h1></div>
+                                <div id="box3"><h1 id="box3-letter"></h1></div>
+                                <div id="box4"><h1 id="box4-letter"></h1></div>
+                                <div id="box5"><h1 id="box5-letter"></h1></div>
                             </div>
                             <div class="row4">
-                                <div id="box1"></div>
-                                <div id="box2"></div>
-                                <div id="box3"></div>
-                                <div id="box4"></div>
-                                <div id="box5"></div>
-                                <div><h1 id="box1-letter"></h1></div>
-                                <div><h1 id="box2-letter"></h1></div>
-                                <div><h1 id="box3-letter"></h1></div>
-                                <div><h1 id="box4-letter"></h1></div>
-                                <div><h1 id="box5-letter"></h1></div>
+                                <div id="box1"><h1 id="box1-letter"></h1></div>
+                                <div id="box2"><h1 id="box2-letter"></h1></div>
+                                <div id="box3"><h1 id="box3-letter"></h1></div>
+                                <div id="box4"><h1 id="box4-letter"></h1></div>
+                                <div id="box5"><h1 id="box5-letter"></h1></div>
                             </div>
                             <div class="row5">
-                                <div id="box1"></div>
-                                <div id="box2"></div>
-                                <div id="box3"></div>
-                                <div id="box4"></div>
-                                <div id="box5"></div>
-                                <div><h1 id="box1-letter"></h1></div>
-                                <div><h1 id="box2-letter"></h1></div>
-                                <div><h1 id="box3-letter"></h1></div>
-                                <div><h1 id="box4-letter"></h1></div>
-                                <div><h1 id="box5-letter"></h1></div>
+                                <div id="box1"><h1 id="box1-letter"></h1></div>
+                                <div id="box2"><h1 id="box2-letter"></h1></div>
+                                <div id="box3"><h1 id="box3-letter"></h1></div>
+                                <div id="box4"><h1 id="box4-letter"></h1></div>
+                                <div id="box5"><h1 id="box5-letter"></h1></div>
                             </div>
-                            <div class="row6">
-                                <div id="box1"></div>
-                                <div id="box2"></div>
-                                <div id="box3"></div>
-                                <div id="box4"></div>
-                                <div id="box5"></div>
-                                <div><h1 id="box1-letter"></h1></div>
-                                <div><h1 id="box2-letter"></h1></div>
-                                <div><h1 id="box3-letter"></h1></div>
-                                <div><h1 id="box4-letter"></h1></div>
-                                <div><h1 id="box5-letter"></h1></div>
+                                <div class="row6">
+                                <div id="box1"><h1 id="box1-letter"></h1></div>
+                                <div id="box2"><h1 id="box2-letter"></h1></div>
+                                <div id="box3"><h1 id="box3-letter"></h1></div>
+                                <div id="box4"><h1 id="box4-letter"></h1></div>
+                                <div id="box5"><h1 id="box5-letter"></h1></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="javascript.js" charset="utf-8"></script>
     </body>
 </html>
